# ics-sync-server

./: .env.example  Dockerfile  LICENSE  README.md  main.py  pyproject.toml  utils.py
pages/: ucpa.py
